# misis2026s-25-03-belov-d-s

./: CMakeLists.txt  status.md
prj.labs/: CMakeLists.txt
prj.labs/arrayd/: arrayd.cpp  arrayd.hpp
prj.labs/bitsetd/: bitsetd.cpp  bitsetd.hpp
prj.labs/complex/: complex.cpp  complex.hpp
prj.labs/dio/: dio.cpp  dio.hpp
prj.labs/queuea/: CMakeLists.txt  queue.hpp  queuea.cpp  queuea.hpp
prj.labs/rational/: rational.cpp  rational.hpp
prj.labs/stacka/: stacka.cpp  stacka.hpp
prj.test/: CMakeLists.txt  arrayd_test.cpp  complex_test.cpp  rational_test.cpp  stacka_test.cpp
prj.thirdparty/doctest/: doctest.h
